--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NexPressGular</title>
+  <title>web-examples-platform</title>
 
   <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
@@ -22,9 +22,16 @@
   <div class="row">
     <div class="container">
       <div class="text-center">
+        <h1>Testbed</h1>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="container">
+      <div class="text-center">
         <h1>Welcome to my website</h1>
         <div class="col-md-6 col-md-offset-3">
-          <a href="https://github.com/MPTG94/node-express-angular" target="_blank">
+          <a href="https://github.com/MPTG94/web-examples-platform" target="_blank">
             <button class="btn btn-info btn-block"><i class="fa fa-github" aria-hidden="true"></i> Fork me on github!</button>
           </a>
         </div>
